# Pyproject-Cookiecutter

./: Pyproject-Cookiecutter.code-workspace  cookiecutter.json  make_project.bat  readme.md
{{cookiecutter.app_name}}/: run_cleanup.bat
{{cookiecutter.app_name}}/conda/: conda_environment_def.yml
{{cookiecutter.app_name}}/test/: __init__.py
{{cookiecutter.app_name}}/{{cookiecutter.module_name}}/: __init__.py  config.py
{{cookiecutter.module_name}}/: .gitignore  pyproject.toml  readme.md  setup.bat
{{cookiecutter.module_name}}/{{cookiecutter.module_name}}/: logs.py
{{cookiecutter.project_name}}/: .gitignore  LICENSE  pyproject.toml  run_tests.bat  setup.bat  setup_first_time.bat  {{cookiecutter.module_name}}.code-workspace
{{cookiecutter.project_name}}/conda/: readme.md
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: logs.py
